--- a/src/common/components/header/Header.module.css
+++ b/src/common/components/header/Header.module.css
@@ -1,3 +1,15 @@
 .header {
-   background-color: grey;
+   display: flex;
+   justify-content: flex-start;
+   align-items: center;
+   width: 1280px;
+   height: 60px;
+   background-color: #1d2126;
+   color: #fcfcfc;
+   font-weight: 700;
+   font-size: 22px;
+   line-height: 24px;
+}
+.header span {
+   color: #80bfff;
 }
