--- a/src/common/components/header/Header.module.css
+++ b/src/common/components/header/Header.module.css
@@ -2,7 +2,7 @@
    display: flex;
    justify-content: flex-start;
    align-items: center;
-   width: 1280px;
+   width: 100%;
    height: 60px;
    background-color: #1d2126;
    color: #fcfcfc;
