fix: disable button and styles

--- a/src/features/test/styles/TestQuestion.module.css
+++ b/src/features/test/styles/TestQuestion.module.css
@@ -19,8 +19,17 @@
    margin-bottom: 10px;
    display: inline-block;
 }
+
+.answer label:hover {
+   cursor: pointer;
+}
+
 .checkbox {
    transform: scale(130%);
+}
+
+.checkbox:hover {
+   cursor: pointer;
 }
 
 .buttons {
