--- a/src/features/test/styles/TableOfWrongAnswers.module.css
+++ b/src/features/test/styles/TableOfWrongAnswers.module.css
@@ -19,10 +19,14 @@
 .table td {
    border: 1px solid #e5e5e5;
    height: 35px;
-   vertical-align: center;
+   vertical-align: middle;
 }
 
 .number {
    text-align: center;
    width: 95px;
+}
+
+.img {
+   padding-left: 5px;
 }
